微服务类型配置

--- a/src/app/config-list/modal/select-app/select-app.component.html
+++ b/src/app/config-list/modal/select-app/select-app.component.html
@@ -29,11 +29,7 @@
               ></d-radio>
             </td>
             <td dTableCell *ngFor="let colOption of columns">
-              {{
-                colOption.fieldType === "date"
-                  ? rowItem[colOption.field]
-                  : rowItem[colOption.field]
-              }}
+              {{ rowItem[colOption.field] }}
             </td>
           </tr>
         </ng-template>
