--- a/src/app/config-list/pages/config-create/config-create.component.html
+++ b/src/app/config-list/pages/config-create/config-create.component.html
@@ -27,6 +27,21 @@
         >
       </d-form-control>
     </d-form-item>
+
+    <d-form-item *ngIf="configType === 'service'">
+      <d-form-label [required]="false">微服务</d-form-label>
+      <d-form-control>
+        <span *ngIf="serviceId">{{ serviceId }}</span>
+        <i
+          *ngIf="serviceId && type === 'create'"
+          class="icon icon-delete app-delete"
+          (click)="onDeleteService()"
+        ></i>
+        <d-button *ngIf="!serviceId" bsStyle="common" (click)="onSelectService()"
+          >选择微服务</d-button
+        >
+      </d-form-control>
+    </d-form-item>
     <d-form-item>
       <d-form-label [required]="true" [hasHelp]="true" helpTips="xxxxx">
         配置项
