--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -1,6 +1,6 @@
 <div class="title">服务列表</div>
 <div class="btn-group">
-  <d-button icon="icon-add" bsStyle="primary"> 创建微服务 </d-button>
+  <d-button icon="icon-add" bsStyle="primary" (click)="onCreateService()"> 创建微服务 </d-button>
   <d-button icon="icon-filter" bsStyle="common"> 清理无实例版本 </d-button>
   <d-button icon="icon-filter" bsStyle="common" (click)="deleteItem()">
     删除
