微服务详情

--- a/src/app/config-list/modal/select-service/select-service.component.html
+++ b/src/app/config-list/modal/select-service/select-service.component.html
@@ -49,8 +49,10 @@
             class="w-200"
             [placeholder]="'选择版本'"
             [options]="options"
+            [filterKey]="'version'"
             [readonly]="true"
             [(ngModel)]="selectVersion"
+            [ngModelOptions]="{ standalone: true }"
           ></d-select>
         </d-form-control>
       </d-form-item>
