--- a/src/app/config-list/pages/list/config-list.component.html
+++ b/src/app/config-list/pages/list/config-list.component.html
@@ -71,8 +71,7 @@
             class="cse-mg-left-xs"
             [routerLink]="'/kie/eidt'"
             [queryParams]="{
-              kvId: rowItem.id,
-              configType: rowItem.labels | configType
+              kvId: rowItem.id
             }"
             >更新</d-button
           >
