--- a/src/app/service-detail/components/instance-list/instance-list.component.html
+++ b/src/app/service-detail/components/instance-list/instance-list.component.html
@@ -1,1 +1,65 @@
-<p>instance-list works!</p>
+<d-data-table
+  #datatable
+  [dataSource]="basicDataSource"
+  [scrollable]="true"
+  [type]="'striped'"
+  [headerBg]="true"
+  [tableWidthConfig]="columns"
+>
+  <thead dTableHead>
+    <tr dTableRow>
+      <th dHeadCell *ngFor="let colOption of columns">
+        {{ colOption.header }}
+      </th>
+      <th dHeadCell>操作</th>
+    </tr>
+  </thead>
+  <tbody dTableBody>
+    <ng-template
+      let-rowItem="rowItem"
+      let-rowIndex="rowIndex"
+      let-nestedIndex="nestedIndex"
+    >
+      <tr dTableRow>
+        <td dTableCell *ngFor="let colOption of columns">
+          {{
+            colOption.fieldType === "date"
+              ? (rowItem[colOption.field] | dDatePipe: "y/M/d HH:mm:ss zzzz")
+              : rowItem[colOption.field]
+          }}
+        </td>
+        <td dTableCell>
+          <d-button bsStyle="text">标签管理</d-button>
+          <d-button bsStyle="text" class="cse-mg-left-sm">删除</d-button>
+          <div
+            class="btn-group"
+            dDropDown
+            [trigger]="'hover'"
+            (toggleEvent)="onToggle($event)"
+            appendToBody
+          >
+            <span
+              dDropDownToggle
+              class="icon icon-setup devui-dropdown-origin"
+            ></span>
+            <ul
+              dDropDownMenu
+              class="devui-dropdown-menu devui-scrollbar"
+              role="menu"
+            >
+              <li class="disabled" role="menuitem">
+                <a class="devui-dropdown-item disabled">Item 1</a>
+              </li>
+              <li role="menuitem"><a class="devui-dropdown-item">Item 2</a></li>
+              <li role="menuitem"><a class="devui-dropdown-item">Item 3</a></li>
+            </ul>
+          </div>
+        </td>
+      </tr>
+    </ng-template>
+
+    <ng-template #noResultTemplateRef>
+      <div style="text-align: center; margin-top: 20px">No Data</div>
+    </ng-template>
+  </tbody>
+</d-data-table>
