标签观管理

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,7 +6,7 @@ d-layout {
 
 d-aside {
   padding-left: 1px;
-  height: calc(100vh - var(--cse-header-height) - var(--cse-foot-height));
+  min-height: calc(100vh - var(--cse-header-height) - var(--cse-foot-height));
   .menu {
     position: relative;
     width: 160px;
