服务详情优化

--- a/src/app/service-detail/components/instance-list/instance-list.component.html
+++ b/src/app/service-detail/components/instance-list/instance-list.component.html
@@ -29,7 +29,9 @@
           }}
         </td>
         <td dTableCell>
-          <d-button bsStyle="text">标签管理</d-button>
+          <d-button bsStyle="text" >
+            标签管理
+          </d-button>
           <d-button bsStyle="text" class="cse-mg-left-sm">删除</d-button>
           <div
             class="btn-group"
