--- a/src/app/config-list/pages/list/config-list.component.html
+++ b/src/app/config-list/pages/list/config-list.component.html
@@ -47,7 +47,7 @@
             [tag]="tag"
           ></d-tag>
         </td>
-        <td dTableCell>{{ rowItem.labels | configType }}</td>
+        <td dTableCell>{{ rowItem.labels | ConfigTypePipe }}</td>
         <td dTableCell>{{ rowItem.value_type }}</td>
         <td dTableCell>{{ rowItem.update_revision }}</td>
         <td dTableCell>
