--- a/src/app/service-detail/service-detail.component.html
+++ b/src/app/service-detail/service-detail.component.html
@@ -31,7 +31,7 @@
           <d-form-item>
             <d-form-label> 所属环境 </d-form-label>
             <d-form-control class="form-control-width">
-              {{ serviceData?.environment }}
+              {{ serviceData?.environment | EnvironmentPipe }}
             </d-form-control>
           </d-form-item>
         </div>
@@ -56,7 +56,7 @@
             <d-form-label> 框架 </d-form-label>
             <d-form-control class="form-control-width">
               {{ serviceData?.framework?.name }}&nbsp;&nbsp;
-              {{ '    ' + serviceData?.framework?.version }}
+              {{ "    " + serviceData?.framework?.version }}
             </d-form-control>
           </d-form-item>
         </div>
@@ -147,11 +147,11 @@
           ></app-invoked-service>
         </ng-template>
       </d-tab>
-      <d-tab title="配置" tabId="configuration" id="configuration">
+      <!-- <d-tab title="配置" tabId="configuration" id="configuration">
         <ng-template dTabContent>
           <app-configuration></app-configuration>
         </ng-template>
-      </d-tab>
+      </d-tab> -->
       <d-tab title="服务契约" tabId="contract" id="contract">
         <ng-template dTabContent>
           <app-service-contract></app-service-contract>
