--- a/src/app/shared/manage-tag/manage-tag.component.less
+++ b/src/app/shared/manage-tag/manage-tag.component.less
@@ -44,3 +44,7 @@ tbody > tr > td {
   border-bottom: 1px solid #dfe1e6;
   border-bottom: 1px solid var(--devui-dividing-line, #dfe1e6);
 }
+
+.border-bottom-none {
+  border-bottom: none !important;
+}
