--- a/src/app/config-list/modal/select-service/select-service.component.html
+++ b/src/app/config-list/modal/select-service/select-service.component.html
@@ -7,7 +7,7 @@
         <d-form-label [required]="true">选择微服务</d-form-label>
         <d-form-control>
           <d-data-table
-            [dataSource]="basicDataSource"
+            [dataSource]="dataSource"
             [scrollable]="true"
             [type]="'striped'"
             [tableWidthConfig]="tableWidthConfig"
@@ -40,6 +40,21 @@
               </ng-template>
             </tbody>
           </d-data-table>
+          <d-pagination
+            class="cse-mg-top-xs"
+            [autoHide]="true"
+            [size]="'sm'"
+            [total]="pager.total"
+            [(pageSize)]="pager.pageSize"
+            [(pageIndex)]="pager.pageIndex"
+            [canViewTotal]="true"
+            [canChangePageSize]="true"
+            [pageSizeOptions]="pager.pageSizeOptions"
+            [maxItems]="5"
+            (pageIndexChange)="onPaginationChange($event, pager.pageSize)"
+            (pageSizeChange)="onPaginationChange(pager.pageIndex, $event)"
+          >
+          </d-pagination>
         </d-form-control>
       </d-form-item>
       <d-form-item>
