--- a/src/app/instance-list/instance-list.component.html
+++ b/src/app/instance-list/instance-list.component.html
@@ -2,7 +2,7 @@
 
 <d-data-table
   #datatable
-  [dataSource]="basicDataSource"
+  [dataSource]="dataSource"
   [scrollable]="true"
   [type]="'striped'"
   [headerBg]="true"
@@ -23,12 +23,14 @@
       let-nestedIndex="nestedIndex"
     >
       <tr dTableRow>
-        <td dTableCell>{{rowItem.hostName}}</td>
-        <td dTableCell>{{rowItem.status | InstanceStatus}}</td>
-        <td dTableCell>{{rowItem.environment}}</td>
-        <td dTableCell>{{rowItem.serviceName}}</td>
-        <td dTableCell>{{rowItem.version}}</td>
-        <td dTableCell>{{rowItem.modTimestamp | dDatePipe: "y/M/d HH:mm:ss zzzz"}}</td>
+        <td dTableCell>{{ rowItem.hostName }}</td>
+        <td dTableCell>{{ rowItem.status | InstanceStatus }}</td>
+        <td dTableCell>{{ rowItem.environment }}</td>
+        <td dTableCell>{{ rowItem.serviceName }}</td>
+        <td dTableCell>{{ rowItem.version }}</td>
+        <td dTableCell>
+          {{ rowItem.modTimestamp | dDatePipe: "y/M/d HH:mm:ss zzzz" }}
+        </td>
         <td dTableCell>
           <app-action-menu
             [actions]="actionFn(rowItem)"
