--- a/src/app/service-list/modal/create/create.component.html
+++ b/src/app/service-list/modal/create/create.component.html
@@ -72,7 +72,7 @@
             [filterKey]="'label'"
             [options]="envOpetions"
             [(ngModel)]="environment"
-            [ngModelOptions]="{ updateOn: 'blur', standalone: true }"
+            [ngModelOptions]="{ standalone: true }"
             size="sm"
           ></d-select>
         </d-form-control>
