--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -3,8 +3,7 @@
   <d-button icon="icon-add" bsStyle="primary" (click)="onCreateService()">
     创建微服务
   </d-button>
-  <d-button icon="icon-filter" bsStyle="common"> 清理无实例版本 </d-button>
-  <d-button icon="icon-filter" bsStyle="common" (click)="deleteItem()">
+  <d-button icon="icon-delete" bsStyle="common" (click)="deleteItem()">
     删除
   </d-button>
 </div>
