--- a/src/app/service-detail/components/invoked-service/invoked-service.component.html
+++ b/src/app/service-detail/components/invoked-service/invoked-service.component.html
@@ -35,3 +35,18 @@
     </ng-template>
   </tbody>
 </d-data-table>
+<d-pagination
+  class="cse-mg-top-xs"
+  [autoHide]="true"
+  [size]="'sm'"
+  [total]="pager.total"
+  [(pageSize)]="pager.pageSize"
+  [(pageIndex)]="pager.pageIndex"
+  [canViewTotal]="true"
+  [canChangePageSize]="true"
+  [pageSizeOptions]="pager.pageSizeOptions"
+  [maxItems]="5"
+  (pageIndexChange)="onPaginationChange($event, pager.pageSize)"
+  (pageSizeChange)="onPaginationChange(pager.pageIndex, $event)"
+>
+</d-pagination>
