--- a/src/app/service-list/modal/delete/delete.component.html
+++ b/src/app/service-list/modal/delete/delete.component.html
@@ -2,114 +2,15 @@
   <h2>删除微服务</h2>
 
   <div class="container">
-    <div style="width: 80px">
-      <img src="" alt="" />
-    </div>
     <div>
-      <div>确定要对以下 1 个微服务及其版本进行删除操作吗？</div>
+      <div>确定要对微服务及其版本进行删除操作吗？</div>
       <p>
         删除后将无法恢复。
         <span style="color: red">
           如果删除的服务有实例，需要先将对应实例卸载，否则服务会再次注册。
         </span>
       </p>
-
-      <p>
-        请在下方的输入框中输入"<span style="color: red">DELETE</span
-        >"确认删除以下微服务。
-      </p>
-
-      <div>
-        <input
-          type="text"
-          dTextInput
-          [(ngModel)]="confrimText"
-          [ngModelOptions]="{ standalone: true }"
-        />
-      </div>
     </div>
-    <!-- <form dForm ngForm #form>
-      <d-form-item>
-        <d-form-label [required]="true">微服名称</d-form-label>
-        <d-form-control>
-          <input
-            dTextInput
-            placeholder="数字字母开头结尾，例如：myServiceName"
-            [(ngModel)]="serviceName"
-            [ngModelOptions]="{ standalone: true }"
-            [dValidateRules]="[
-              { required: true },
-              { whitespace: true },
-              { minlength: 1 },
-              { maxlength: 128 },
-            ]"
-          />
-        </d-form-control>
-      </d-form-item>
-      <d-form-item>
-        <d-form-label [required]="true">微服务应用</d-form-label>
-        <d-form-control>
-          <input
-            dTextInput
-            placeholder="数字字母开头结尾，例如：myAppId"
-            [(ngModel)]="appId"
-            [ngModelOptions]="{ standalone: true }"
-            [dValidateRules]="[
-              { required: true },
-              { whitespace: true },
-              { minlength: 1 },
-              { maxlength: 128 },
-            ]"
-          />
-        </d-form-control>
-      </d-form-item>
-      <d-form-item>
-        <d-form-label [required]="true">版本</d-form-label>
-        <d-form-control>
-          <input
-            dTextInput
-            [(ngModel)]="version"
-            [ngModelOptions]="{ standalone: true }"
-            [dValidateRules]="[
-              { required: true },
-              { whitespace: true },
-              { minlength: 3 },
-              { maxlength: 46 },
-              {
-                pattern: versionReg,
-                message: {
-                  'zh-cn':
-                    'X.Y.Z, X.Y.Z.B 型版本号, X、Y、Z 为数字且范围在0-32767, 长度为3-46个字符',
-                  'en-us':
-                    'The value cannot contain characters except uppercase and lowercase letters.',
-                  default:
-                    'X.Y.Z, X.Y.Z.B 型版本号, X、Y、Z 为数字且范围在0-32767, 长度为3-46个字符'
-                }
-              }
-            ]"
-          />
-        </d-form-control>
-      </d-form-item>
-      <d-form-item>
-        <d-form-label [required]="true">微服务环境</d-form-label>
-        <d-form-control>
-          <d-select
-            class="w-150"
-            [filterKey]="'label'"
-            [options]="envOpetions"
-            [(ngModel)]="environment"
-            [ngModelOptions]="{ updateOn: 'blur', standalone: true }"
-            size="sm"
-          ></d-select>
-        </d-form-control>
-      </d-form-item>
-      <d-form-item>
-        <d-form-label [required]="false">描述</d-form-label>
-        <d-form-control>
-          <textarea dTextarea placeholder="Please Enter"></textarea>
-        </d-form-control>
-      </d-form-item>
-    </form> -->
   </div>
   <div class="footer">
     <d-button bsStyle="danger" (click)="onConfirm()">确定</d-button>
