--- a/src/app/service-list/service-list.component.html
+++ b/src/app/service-list/service-list.component.html
@@ -7,86 +7,93 @@
     删除
   </d-button>
 </div>
-
-<d-data-table
-  [dataSource]="dataSource"
-  [tableWidthConfig]="tableWidthConfig"
-  [headerBg]="true"
->
-  <thead dTableHead [checkable]="true" [checkOptions]="checkOptions">
-    <tr dTableRow>
-      <th dHeadCell width="150px">Name</th>
-      <th dHeadCell *ngFor="let colOption of columns">
-        {{ colOption.header }}
-      </th>
-      <th dHeadCell width="150px">Operation</th>
-    </tr>
-  </thead>
-  <tbody dTableBody>
-    <ng-template
-      let-rowItem="rowItem"
-      let-rowIndex="rowIndex"
-      let-nestedIndex="nestedIndex"
-    >
-      <tr dTableRow [ngClass]="{ 'table-row-selected': rowItem.$checked }">
-        <td dTableCell class="devui-checkable-cell">
-          <d-checkbox
-            (ngModelChange)="
-              onRowCheckChange($event, rowIndex, nestedIndex, rowItem)
-            "
-            [(ngModel)]="rowItem.$checked"
-            [disabled]="rowItem.$checkDisabled"
-          >
-          </d-checkbox>
-        </td>
-        <td dTableCell>
-          <a [routerLink]="['/servicedetail', rowItem.serviceId]">
-            {{ rowItem.serviceName }}
-          </a>
-        </td>
-        <td dTableCall>
-          {{ rowItem.environment | EnvironmentPipe }}
-        </td>
-        <td dTableCall>
-          {{ rowItem.version }}
-        </td>
-        <td dTableCall>
-          {{ rowItem.appId }}
-        </td>
-        <td dTableCall>
-          {{ rowItem.timestamp | dDatePipe: "y/M/d HH:mm:ss zzzz" }}
-        </td>
-        <td dTableCell>
-          <d-button bsStyle="text" (click)="manageTag(rowItem)"
-            >标签管理</d-button
-          >
-          <d-button
-            bsStyle="text"
-            class="cse-mg-left-sm"
-            (click)="deleteItem(rowItem)"
-            >删除</d-button
-          >
-        </td>
+<div>
+  <app-filter-refresh
+    [category]="category"
+    (selectedTagsChange)="onSelectedTagsChange($event)"
+    (refresh)="onRefresh()"
+  >
+  </app-filter-refresh>
+  <d-data-table
+    [dataSource]="dataSource"
+    [tableWidthConfig]="tableWidthConfig"
+    [headerBg]="true"
+  >
+    <thead dTableHead [checkable]="true" [checkOptions]="checkOptions">
+      <tr dTableRow>
+        <th dHeadCell width="150px">Name</th>
+        <th dHeadCell *ngFor="let colOption of columns">
+          {{ colOption.header }}
+        </th>
+        <th dHeadCell width="150px">Operation</th>
       </tr>
-    </ng-template>
+    </thead>
+    <tbody dTableBody>
+      <ng-template
+        let-rowItem="rowItem"
+        let-rowIndex="rowIndex"
+        let-nestedIndex="nestedIndex"
+      >
+        <tr dTableRow [ngClass]="{ 'table-row-selected': rowItem.$checked }">
+          <td dTableCell class="devui-checkable-cell">
+            <d-checkbox
+              (ngModelChange)="
+                onRowCheckChange($event, rowIndex, nestedIndex, rowItem)
+              "
+              [(ngModel)]="rowItem.$checked"
+              [disabled]="rowItem.$checkDisabled"
+            >
+            </d-checkbox>
+          </td>
+          <td dTableCell>
+            <a [routerLink]="['/servicedetail', rowItem.serviceId]">
+              {{ rowItem.serviceName }}
+            </a>
+          </td>
+          <td dTableCall>
+            {{ rowItem.environment | EnvironmentPipe }}
+          </td>
+          <td dTableCall>
+            {{ rowItem.version }}
+          </td>
+          <td dTableCall>
+            {{ rowItem.appId }}
+          </td>
+          <td dTableCall>
+            {{ rowItem.timestamp | dDatePipe: "y/M/d HH:mm:ss zzzz" }}
+          </td>
+          <td dTableCell>
+            <d-button bsStyle="text" (click)="manageTag(rowItem)"
+              >标签管理</d-button
+            >
+            <d-button
+              bsStyle="text"
+              class="cse-mg-left-sm"
+              (click)="deleteItem(rowItem)"
+              >删除</d-button
+            >
+          </td>
+        </tr>
+      </ng-template>
 
-    <ng-template #noResultTemplateRef>
-      <div style="text-align: center; margin-top: 20px">No Data</div>
-    </ng-template>
-  </tbody>
-</d-data-table>
-<d-pagination
-  class="cse-mg-top-xs"
-  [autoHide]="true"
-  [size]="'sm'"
-  [total]="pager.total"
-  [(pageSize)]="pager.pageSize"
-  [(pageIndex)]="pager.pageIndex"
-  [canViewTotal]="true"
-  [canChangePageSize]="true"
-  [pageSizeOptions]="pager.pageSizeOptions"
-  [maxItems]="5"
-  (pageIndexChange)="onPaginationChange($event, pager.pageSize)"
-  (pageSizeChange)="onPaginationChange(pager.pageIndex, $event)"
->
-</d-pagination>
+      <ng-template #noResultTemplateRef>
+        <div style="text-align: center; margin-top: 20px">No Data</div>
+      </ng-template>
+    </tbody>
+  </d-data-table>
+  <d-pagination
+    class="cse-mg-top-xs"
+    [autoHide]="true"
+    [size]="'sm'"
+    [total]="pager.total"
+    [(pageSize)]="pager.pageSize"
+    [(pageIndex)]="pager.pageIndex"
+    [canViewTotal]="true"
+    [canChangePageSize]="true"
+    [pageSizeOptions]="pager.pageSizeOptions"
+    [maxItems]="5"
+    (pageIndexChange)="onPaginationChange($event, pager.pageSize)"
+    (pageSizeChange)="onPaginationChange(pager.pageIndex, $event)"
+  >
+  </d-pagination>
+</div>
