刷新清除过滤项

--- a/src/app/service-detail/components/invoked-service/invoked-service.component.html
+++ b/src/app/service-detail/components/invoked-service/invoked-service.component.html
@@ -1,6 +1,6 @@
 <d-data-table
   #datatable
-  [dataSource]="basicDataSource"
+  [dataSource]="dataSource"
   [scrollable]="true"
   [type]="'striped'"
   [headerBg]="true"
